# finalrepo

algotrader-main/: .env.template  .gitignore  .kite_session_WV1243.json  .replit  COMPLETE_FLOW_GUIDE.md  COMPREHENSIVE_REVIEW_REPORT.md  CREDIT_SPREADS_INDEX.md  CREDIT_SPREADS_SUMMARY.md  CRITICAL_ADDENDUM_5_EVENT_SAFEGUARDS.md  CRITICAL_EXECUTION_FIXES.md  DEPLOYMENT_READINESS_CHECKLIST.md  DOCUMENT_NAVIGATOR.md  Dockerfile  ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  EXECUTIVE_SUMMARY_FIX1_REDESIGN.md  FIX_1_CRITICAL_REDESIGN.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_GUIDE_5_SAFEGUARDS.md  MIGRATION_GUIDE_FIX1.md  ORDER_EVENT_FLOW.md  ORDER_EXECUTION_ANALYSIS.md  POSITION_TRACKING_GUIDE.md  QUICK_REFERENCE_FIXES.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPROVEMENTS.md  STRATEGY_ANALYSIS_REVIEW.md  SUMMARY_CRITICAL_GAPS_IDENTIFIED.md  UPDATED_DEPLOYMENT_STATUS.md  VISUAL_ARCHITECTURE_GUIDE.md  _test_out.txt  agents.md  debug_journal.py  diagnose_health.py  diagnose_trades.py  main.py  mcp_settings.json  pyproject.toml  replit.md  requirements.txt  (+12 more)
algotrader-main/attached_assets/: Pasted-Build-a-production-grade-algorithmic-trading-agent-in-P_1771676286102.txt
algotrader-main/templates/: dashboard.html  login.html
algotrader-main/tests/: conftest.py  test_all_strategies.py  test_call_credit_spread_runner.py  test_critical_fixes.py  test_data_resolver.py  test_fno_backtest.py  test_fno_components.py  test_fno_integration.py  test_fno_paper_trading.py  test_health_all_strategies.py  test_institutional_features.py  test_oi_analysis.py  (+4 more)
(+79 files in other folders)
